--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,19 @@
-streamlit
-requests
-gTTS
-PyMuPDF
-nltk
+# Core app
+streamlit==1.37.0
+requests==2.32.3
+gTTS==2.5.3
+PyMuPDF==1.24.10
+
+# Vector DB
+chromadb==0.5.5
+
+# Embeddings + Hugging Face
+sentence-transformers==3.0.1
+transformers==4.44.2
+tokenizers==0.19.1
+huggingface-hub==0.24.5
+
+# Torch backend (CPU only, works everywhere)
+torch==2.3.1
+torchvision==0.18.1
+torchaudio==2.3.1
